# Moderen-Roboterkonzepte

./: README.md  app.py  pyproject.toml  rag.py  tools.py
knowledge_base/: locations.json
