[project]
name = "moderen-roboterkonzepte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.3.33",
    "langgraph>=0.2.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.28.0",
]
